@@ -1,3 +1,8 @@
+Mon Oct 25 08:09:14 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_attr_init.cpp:
+          Simplified
+
 Mon Oct 25 05:58:18 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * TAO_IDL/be/be_visitor_attr_init.cpp:
